--- a/style.css
+++ b/style.css
@@ -1,29 +1,33 @@
-/* CSS Document */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
-*{
-	box-sizing:border-box;
-	margin:0;
-	padding:0;
+:root {
+	--primary-color: #3a4052;
 }
 
-body{
-	font-family:'Open Sans',sans-serif;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	font-family: 'Open Sans', sans-serif;
 	line-height: 1.5;
 }
 
-a{
+a {
 	text-decoration: none;
-	color: war(--primary-color);
+	color: var(--primary-color);
 }
 
-h1{
+h1 {
 	font-weight: 300;
 	font-size: 60px;
 	line-height: 1.2;
 	margin-bottom: 15px;
 }
 
-.showcase{
+.showcase {
 	height: 100vh;
 	display: flex;
 	align-items: center;
@@ -33,43 +37,43 @@ h1{
 	padding: 0 20px;
 }
 
-.video contaniner{
-	postition: absolute;
+.video-container {
+	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	background:var(--primary-color) url('cover.jpeg') no-repeat center center/cover;
+	background: var(--primary-color) url('cover.jpg') no-repeat center
+		center/cover;
 }
 
-.video-container video{
+.video-container video {
 	min-width: 100%;
 	min-height: 100%;
-	postition: absolute;
+  position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	object-fit: cover;
 }
 
-.video-container:after{
-	content: ";
+.video-container:after {
+	content: '';
 	z-index: 1;
 	height: 100%;
 	width: 100%;
 	top: 0;
 	left: 0;
-	background: rgba(0,0,0,0.5);
+	background: rgba(0, 0, 0, 0.5);
 	position: absolute;
 }
-
 
 .content {
 	z-index: 2;
 }
 
-.btm {
+.btn {
 	display: inline-block;
 	padding: 10px 30px;
 	background: var(--primary-color);
@@ -82,11 +86,24 @@ h1{
 
 .btn:hover {
 	transform: scale(0.98);
+}
+
+#about {
+	padding: 40px;
 	text-align: center;
 }
 
+#about p {
+	font-size: 1.2rem;
+	max-width: 600px;
+	margin: auto;
+}
 
+#about h2 {
+	margin: 30px 0;
+	color: var(--primary-color);
+}
 
-
-
-
+.social a {
+	margin: 0 5px;
+}
